tests/semantic/fail/logical_and_bad_lhs.c
int main(void) {
  int i;
  struct S {int i;} s;
  if (i && s) {
     return 0;
  }
}
